Remove need for commons-io